--- a/csbox/templates/teacher/single_course.html
+++ b/csbox/templates/teacher/single_course.html
@@ -15,7 +15,7 @@
 document.addEventListener("DOMContentLoaded", function() {
   var toggleButtons = document.getElementsByClassName("toggle-button");
   var popupSections = document.getElementsByClassName("toggle-section");
-  console.log("hello")
+  
 
   // Attach event listeners to each toggle button
   Array.from(toggleButtons).forEach(function(button) {
@@ -113,7 +113,24 @@ document.addEventListener("DOMContentLoaded", function() {
                     <!-- delete post popup -->
                     <div class="post-delPopup" id="d{{post.id}}">
                         <div class="post-delContent">
-                            Delete
+                            <h2 class="head">Please Confirm Delete</h2>
+                            <div {%if post.is_announcement%} class="post-card-red"{%else%} class="post-card"{%endif%}>
+                                <div class="card-heading-warper">
+                                    <h2 class="post-heading">
+                                        <span class="bold">{{post.creator.first_name}} {{post.creator.last_name}}</span>
+                                        {%if post.is_announcement%}Announce to{%else%}Post to{%endif%}
+                                        <span class="bold">{{post.session}}</span>
+                                        batch
+                                        <span class="bold">{{post.session.batch}}-{{post.session.section.section}}</span>
+                                        <span class="tiny"> - {{post.session.semester}}</span>
+                                    </h2>
+                                    <p class="time">{{post.created | timesince}} ago</p>   
+                                    <p class="date">{{post.created.date}}</p>
+                                </div>
+                                <div class="post-body">
+                                    <h2 class="{%if post.postBody|length < 100%}body-text-normal{%else%}body-text-small{%endif%}">{{post.postBody}}</h2>
+                                </div>
+                            </div>
                             <button class="pop-close" data-popup="d{{post.id}}">cancel</button>
                         </div>
                     </div>
