Teacher profile, home page, single post

--- a/csbox/static/css/layout.css
+++ b/csbox/static/css/layout.css
@@ -93,8 +93,9 @@
 
 .dropdown-btn {
     background-color: #10B0A7;
+    border-radius: 5px;
     color: white;
-    padding: 12px;
+    padding: 10px;
     font-size: 16px;
     border: none;
     cursor: pointer;
