--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -304,6 +304,46 @@
     transform: translate(-50%, -50%);
     position: relative;
 }
+
+.edit-head{
+    width: 100%;
+    font-weight: 400;
+    font-size:1.4rem;
+    text-align: center;
+    margin-bottom: 1.2rem;
+    padding: 10px 0;
+    border: 1px solid black;
+}
+
+
+.button-group{
+    margin-top: 1.4rem;
+}
+
+
+.pop-closeEdit{
+    padding: 11px 10px;
+    background: none;
+    border: none;
+    background-color: rgb(246, 56, 56);
+    color: white;
+    border-radius: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.edit-btn{
+    text-decoration: none;
+    padding: 10px 10px;
+    background: none;
+    border: none;
+    background-color:#10B0A7;
+    color: white;
+    border-radius: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+
 /* #toggleSection{
     background-color: red;
     z-index: 999;
