--- a/csbox/static/css/teacher/teacher_profile.css
+++ b/csbox/static/css/teacher/teacher_profile.css
@@ -43,12 +43,100 @@
 .personal_info{
     width: 63%;
     position: absolute;
-    bottom: 187px;
-    left: 410px;
+    top: 400px;
+    left: 430px;
 }
 .each{
-    margin:1.2rem; 
+    margin:1.2rem 0; 
 }
 .bold{
     font-weight: bold;
 }
+.edit-btn{
+    padding:.7rem;
+    border-radius: 5px;
+    background-color: #10B0A7;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.popupContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.787);
+}
+
+.popupContent {
+    background-color: white;
+    width: 600px;
+    padding: 20px;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: relative;
+}
+
+.popupContent .closeButton{
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: white;
+    border: none;
+    box-shadow: 0 0 2px 2px rgb(36, 36, 36);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .2s ease;
+}
+.popupContent .closeButton:hover{
+    background: red;
+    color: white;
+    cursor: pointer;
+}
+
+.form-group {
+    margin-bottom: 15px;
+  }
+  
+  .form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  .form-group input[type="text"],
+  .form-group input[type="image"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .form-group button[type="submit"] {
+    background-color: #10B0A7;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .form-group button[type="submit"]:hover {
+    background-color: #45a049;
+  }
+
+
+
+
+  
