--- a/csbox/static/css/teacher/teacher_profile.css
+++ b/csbox/static/css/teacher/teacher_profile.css
@@ -81,7 +81,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: relative;
+    /* position: relative; */
 }
 
 .popupContent .closeButton{
