--- a/csbox/templates/layout.html
+++ b/csbox/templates/layout.html
@@ -59,7 +59,7 @@
                     {{request.user.first_name}} {{request.user.last_name}}
                 </div>
                 <div class="dropdown-content" id="myDropdown">
-                    <a href="{%url 'check_profile' request.user.id %}">My Account</a>
+                    <a href="{%url 'check_profile'%}">My Account</a>
                     <a href="{%url 'logout'%}">Logout</a>
                 </div>
             </div>
