--- a/csbox/templates/layout.html
+++ b/csbox/templates/layout.html
@@ -49,7 +49,9 @@
             {%endif%}
             
             {%if request.user.is_authenticated%}
-            <a class="all_courses" href="{%url 'courses'%}">Session</a>
+                {%if not student%}
+                <a class="all_courses" href="{%url 'courses'%}">Session</a>
+                {%endif%}
             {%endif%}
         </div>
         {%if request.user.is_authenticated%}
