--- a/csbox/templates/student/home.html
+++ b/csbox/templates/student/home.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Student Home page
-</body>
-</html>
+{%extends 'layout.html'%}
+
+{%load static%}
+
+{%block title%}
+    Home | CSBox - Educational Platform
+{%endblock title%}
+
+{%block link%} 
+    <link rel="stylesheet" href="{%static 'css/teacher/home.css'%}"/>
+{%endblock link%}
+
+{%block script%}{%endblock script%}
+
+{%block content%}
+    
+    <div class="wraper">
+        This is Student home page Tanvir Mahmud Fahim, Stamford University Bangladesh, Computer Science & Engineering
+    </div>
+    
+{%endblock content%}
