--- a/csbox/templates/teacher/all_courses.html
+++ b/csbox/templates/teacher/all_courses.html
@@ -11,6 +11,14 @@
 <link rel="stylesheet" href="{%static 'css/teacher/all_courses.css'%}"/>
 {%endblock link%}
 
+{%block navImg%}
+    {%if teacher_profile.profile_pic%}
+        <img src="{{teacher_profile.profile_pic.url}}" alt="Profile Pic">
+    {%else%}
+        <img src="../../media/default_profile_pic.webp" alt="Profile pic">
+    {%endif%}
+{%endblock navImg%}
+
 {%block script%}
 <script>
     function info(){
