--- a/csbox/templates/layout.html
+++ b/csbox/templates/layout.html
@@ -39,7 +39,7 @@
             {%if request.user.is_authenticated%}
                 <a class="branding" href="{%url 'home'%}">
                     <img src="{%static 'images/open-box.png'%}" width="43" alt="branding logo"/>
-                    <h1>CSBox</h1>
+                    <h1>csBox</h1>
                 </a>
             {%else%}
                 <a class="branding" href="{%url 'signin'%}">
