--- a/csbox/templates/teacher/teacher_profile.html
+++ b/csbox/templates/teacher/teacher_profile.html
@@ -22,7 +22,7 @@
     
     <div class="wraper">
         <div class="cover_photo">
-            {%if student_profile.cover_pic%}
+            {%if teacher_profile.cover_pic%}
                 <img src="{{teacher_profile.cover_pic.url}}" alt="Cover photo">
             {%else%}
                 <div class="no_cover">
@@ -33,7 +33,7 @@
         <div class="profile_head">
             <div class="profile_avatar">
                 {%if teacher_profile.profile_pic%}
-                    <img src="{{student_profile.profile_pic.url}}" alt="Profile pic">
+                    <img src="{{teacher_profile.profile_pic.url}}" alt="Profile pic">
                 {%else%}
                     <img src="../../media/default_profile_pic.webp" alt="Profile pic">
                 {%endif%}
@@ -64,7 +64,7 @@
     <!-- Popup Form section -->
     <div class="popupContainer" id="popupContainer">
         <div class="popupContent" id="popupContent">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {%csrf_token%}
                 <div class="form-group">
                   <input type="text" id="bio" name="bio" placeholder="Bio" {%if teacher_profile.bio%} value="{{teacher_profile.bio}}" {%endif%}>
@@ -79,12 +79,12 @@
                     <input type="text" id="address" name="address" placeholder="From" {%if teacher_profile.address%} value="{{teacher_profile.address}}" {%endif%}>
                 </div>
                 <div class="form-group">
-                    <label for="image1">Select Porfile Picture:</label>
-                    <input type="file" id="image1" name="image1" alt="profile pic">
+                    <label for="profile-pic">Select Porfile Picture:</label>
+                    <input type="file" id="profile-pic" name="profile-pic" alt="profile pic">
                   </div>
                   <div class="form-group">
-                    <label for="image2">Set a Cover photo:</label>
-                    <input type="file" id="image2" name="image2" alt="cover pic">
+                    <label for="cover-pic">Set a Cover photo:</label>
+                    <input type="file" id="cover-pic" name="cover-pic" alt="cover pic">
                   </div>
                 <div class="form-group">
                   <button type="submit">Save</button>
