unique token for each session - joining session

--- a/csbox/templates/teacher/single_course.html
+++ b/csbox/templates/teacher/single_course.html
@@ -68,6 +68,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 <p class="element"><span class="bold">Department:</span> {{course_obj.department}}</p>
                 <p class="element"><span class="bold">Batch:</span> {{course_obj.batch}}</p>
                 <p class="element"><span class="bold">Section:</span> {{course_obj.section.section}}</p>
+                <p class="element"><span class="bold">Token:</span> <span class="token">{{course_obj.token}}</span></p>
             </div>
         </div>
         <div class="other_info">
