--- a/csbox/static/css/teacher/single_course.css
+++ b/csbox/static/css/teacher/single_course.css
@@ -41,6 +41,11 @@
     font-weight: bold;
     color: black;
 }
+.token{
+    background-color: rgba(255, 255, 0, 0.545);
+    color: black;
+    padding: .5rem;
+}
 
 .other_info{
     position: absolute;
