--- a/csbox/templates/teacher/single_course.html
+++ b/csbox/templates/teacher/single_course.html
@@ -83,7 +83,11 @@ document.addEventListener("DOMContentLoaded", function() {
                     {%endfor%}
                 </div>
                 <div id="Member_section" class="member_section">
-                    This is member Section
+                    <ul>
+                        {%for each in session_member%}
+                            <li>{{each.member.user.first_name}} {{each.member.user.last_name}}</li>
+                        {%endfor%}
+                    </ul>
                 </div>
             </div>
         </div>
