--- a/csbox/templates/student/home.html
+++ b/csbox/templates/student/home.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="{%static 'css/teacher/home.css'%}"/>
 {%endblock link%}
 
+{%block navImg%}
+    {%if student_profile.profile_pic%}
+        <img src="{{student_profile.profile_pic.url}}" alt="Profile Pic">
+    {%else%}
+        <img src="../../media/default_profile_pic.webp" alt="Profile pic">
+    {%endif%}
+{%endblock navImg%}
+
 {%block script%}{%endblock script%}
 
 {%block content%}
@@ -17,7 +25,7 @@
     <div class="wraper">
         <form method="POST">
             {%csrf_token%}
-            <input type="text" id="token" name="token" placeholder="Session Token">
+            <input type="text" id="token" name="token" placeholder="Session Token" required>
             <input type="submit" value="Join Session">
         </form>
         {%if messages%}
